--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "traffic-monitor-app",
-  "version": "1.0.0",
-  "description": "Real-time traffic monitoring app that notifies when traffic builds up or clears",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "ts-node src/index.ts",
-    "dev:watch": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "keywords": ["traffic", "monitoring", "google-maps", "notifications"],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "nodemonConfig": {
-    "watch": ["src"],
-    "ext": "ts",
-    "exec": "ts-node src/index.ts"
-  }
+    "name": "traffic-monitor-server",
+    "version": "1.0.0",
+    "description": "Backend API for traffic monitoring app",
+    "main": "dist/api-server.js",
+    "scripts": {
+        "dev": "ts-node src/api-server.ts",
+        "dev:watch": "nodemon",
+        "build": "tsc",
+        "start": "node dist/api-server.js"
+    },
+    "keywords": [
+        "traffic",
+        "monitoring",
+        "google-maps",
+        "api"
+    ],
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "axios": "^1.6.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "cors": "^2.8.5",
+        "socket.io": "^4.6.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.10.0",
+        "@types/express": "^4.17.21",
+        "@types/cors": "^2.8.17",
+        "nodemon": "^3.0.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    },
+    "nodemonConfig": {
+        "watch": [
+            "src"
+        ],
+        "ext": "ts",
+        "exec": "ts-node src/api-server.ts"
+    }
 }
